<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auth_surface"
    android:paddingStart="@dimen/auth_screen_horizontal_padding"
    android:paddingEnd="@dimen/auth_screen_horizontal_padding">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/auth_back_button_size"
        android:layout_height="@dimen/auth_back_button_size"
        android:layout_marginTop="@dimen/auth_top_spacing"
        android:background="@drawable/bg_auth_back"
        android:contentDescription="@string/previous"
        android:padding="@dimen/auth_back_icon_padding"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/brand_name"
        android:textColor="@color/black"
        android:textSize="@dimen/auth_logo_text_size"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_register_title_top_margin"
        android:fontFamily="@font/quicksand_regular"
        android:text="@string/register"
        android:textColor="@color/auth_text"
        android:textSize="@dimen/auth_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_brand" />

    <LinearLayout
        android:id="@+id/support_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_support_top_margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/support_prompt"
            android:textColor="@color/auth_text"
            android:textSize="@dimen/auth_support_text_size" />

        <TextView
            android:id="@+id/tv_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/click_here"
            android:textColor="@color/auth_red"
            android:textSize="@dimen/auth_support_text_size" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/auth_field_height"
        android:layout_marginTop="@dimen/auth_register_first_field_top_margin"
        android:background="@drawable/bg_auth_field"
        android:fontFamily="@font/quicksand_regular"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/auth_field_horizontal_padding"
        android:paddingEnd="@dimen/auth_field_horizontal_padding"
        android:singleLine="true"
        android:textColor="@color/auth_text"
        android:textColorHint="@color/auth_hint"
        android:textSize="@dimen/auth_field_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/support_row" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/auth_field_height"
        android:layout_marginTop="@dimen/auth_field_spacing"
        android:background="@drawable/bg_auth_field"
        android:fontFamily="@font/quicksand_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/auth_field_horizontal_padding"
        android:paddingEnd="@dimen/auth_field_horizontal_padding"
        android:singleLine="true"
        android:textColor="@color/auth_text"
        android:textColorHint="@color/auth_hint"
        android:textSize="@dimen/auth_field_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_full_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/auth_field_height"
        android:layout_marginTop="@dimen/auth_field_spacing"
        android:background="@drawable/bg_auth_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fontFamily="@font/quicksand_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/auth_field_horizontal_padding"
            android:paddingEnd="@dimen/auth_field_horizontal_padding"
            android:singleLine="true"
            android:textColor="@color/auth_text"
            android:textColorHint="@color/auth_hint"
            android:textSize="@dimen/auth_field_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_toggle_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_toggle_password"
            android:layout_width="@dimen/auth_password_icon_size"
            android:layout_height="@dimen/auth_password_icon_size"
            android:layout_marginEnd="@dimen/auth_field_horizontal_padding"
            android:background="@android:color/transparent"
            android:contentDescription="@string/show_password"
            android:src="@drawable/ic_hide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/btn_create_account"
        android:layout_width="0dp"
        android:layout_height="@dimen/auth_primary_button_height"
        android:layout_marginTop="@dimen/auth_register_primary_button_top_margin"
        android:background="@drawable/bg_auth_primary_button"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="@dimen/auth_primary_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_container" />

    <LinearLayout
        android:id="@+id/or_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_or_top_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_create_account">

        <View
            android:layout_width="@dimen/auth_or_line_width"
            android:layout_height="@dimen/auth_divider_height"
            android:background="@color/auth_divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/auth_or_text_horizontal_margin"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/or"
            android:textColor="@color/auth_text"
            android:textSize="@dimen/auth_or_text_size" />

        <View
            android:layout_width="@dimen/auth_or_line_width"
            android:layout_height="@dimen/auth_divider_height"
            android:background="@color/auth_divider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/social_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_social_top_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_row">

        <ImageButton
            android:id="@+id/btn_google"
            android:layout_width="@dimen/auth_social_icon_size"
            android:layout_height="@dimen/auth_social_icon_size"
            android:background="@android:color/transparent"
            android:contentDescription="@string/continue_with_google"
            android:src="@drawable/ic_google" />

        <ImageButton
            android:id="@+id/btn_apple"
            android:layout_width="@dimen/auth_social_icon_size"
            android:layout_height="@dimen/auth_social_icon_size"
            android:layout_marginStart="@dimen/auth_social_gap"
            android:background="@android:color/transparent"
            android:contentDescription="@string/continue_with_apple"
            android:src="@drawable/ic_apple" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_bottom_text_margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/social_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/has_account"
            android:textColor="@color/auth_text"
            android:textSize="@dimen/auth_bottom_text_size" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/sign_in"
            android:textColor="@color/auth_red"
            android:textSize="@dimen/auth_bottom_text_size" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
